Add subtitle shadow customization support
Introduces a new subtitle shadow setting to the plugin configuration and UI, allowing users to select from preset shadow styles for subtitles. Updates JavaScript logic to apply the selected shadow effect and adds relevant localization strings for the new feature.

--- a/Jellyfin.Plugin.JellyfinEnhanced/js/locales/en.json
+++ b/Jellyfin.Plugin.JellyfinEnhanced/js/locales/en.json
@@ -39,6 +39,7 @@
     "toast_subtitle_style": "🎨 Subtitle Style: {style}",
     "toast_subtitle_size": "📏 Subtitle Size: {size}",
     "toast_subtitle_font": "🔤 Subtitle Font: {font}",
+    "toast_subtitle_shadow": "✨ Subtitle Shadow: {shadow}",
     "toast_random_selection_status": "🎬 {item_type} {status} in random selection",
     "selection_included": "included",
     "selection_excluded": "excluded",
@@ -66,8 +67,9 @@
     "panel_settings_subtitles_style": "Style",
     "panel_settings_subtitles_size": "Size",
     "panel_settings_subtitles_font": "Font",
+    "panel_settings_subtitles_shadow": "Shadow",
     "panel_settings_disable_custom_styles": "Disable Custom Styles",
-    "panel_settings_disable_custom_styles_desc": "Use Jellyfin's default subtitle styles",
+    "panel_settings_disable_custom_styles_desc": "Use Jellyfin's default subtitle rendering",
     "panel_settings_random_button": "Random Button Settings",
     "panel_settings_random_button_enable": "Enable Random Button",
     "panel_settings_random_button_enable_desc": "Show random button in header",
